correção no carousel de portfolio e estilização

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Home</title>
+  <title>Vinicius Ferrari</title>
   <link rel="icon" type="x-icon" href="favicon.ico">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,7 +41,9 @@
         <li><a href="#skills-experience">Habilidades</a></li>
         <li><a href="#portfolio">Portfólios</a></li>
         <li><a target="_blank" href="https://api.whatsapp.com/send/?phone=5519984222461&text=Ol%C3%A1%2C+tenho+um+projeto+em+mente%21+Vamos+conversar%3F&type=phone_number&app_absent=0">Fale Comigo</a></li>
-        <div class="gtranslate_wrapper"></div>
+      </ul>
+    </nav>
+    <div class="gtranslate_wrapper"></div>
         <script>
           window.gtranslateSettings = {
             "default_language": "pt",
@@ -51,15 +53,13 @@
           };
         </script>
         <script src="https://cdn.gtranslate.net/widgets/latest/dropdown.js" defer></script>
-      </ul>
-    </nav>
   </header>
   <header class="with-drawer">
     <button type="button" onclick="DrawerMenuHandler.toggle('bar-drawer-menu')">
       <i class="fa-solid fa-bars fa-2xl"></i>
     </button>
     <div class="logo">
-      <img src="\Design\logo\logo simples.png" alt="Logo">
+      <img src="\Design\logo\logo_box_preenchido.png" alt="Logo">
     </div>
   </header>
   <div class="drawer-menu-container" id="bar-drawer-menu">
@@ -459,14 +459,72 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="\Design\portifolio\dashboard\dashfinanceiro.png" alt="Primeiro Slide">
+              <img src="\Design\portifolio\excel\tela_menu.png" class="expandable" alt="Primeiro Slide">
               <div class="text">
-                <h3>Dashboard Orçamentário</h3>
+                <h3>Sistema Back Office Loja de Vestuário - Excel VBA</h3>
+                <p>Tela inicial com atalho para as telas do sistema</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="\Design\portifolio\excel\tela_painel_vendas.png" class="expandable" alt="Segundo Slide">
+              <div class="text">
+                <p>Tela de processamento de pedidos e vendas</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="\Design\portifolio\excel\tela_recibo.png" class="expandable" alt="Segundo Slide">
+              <div class="text">
+                <p>Tela de gerar recibo de venda</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="\Design\portifolio\excel\tela_cadastro_produto.png" class="expandable" alt="Segundo Slide">
+              <div class="text">
+                <p>Tela cadastro de produtos</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="\Design\portifolio\excel\tela_cadastro_cliente.png" class="expandable" alt="Segundo Slide">
+              <div class="text">
+                <p>Tela cadastro de cliente</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="\Design\portifolio\excel\tela_cadastro_despesas.jpg" class="expandable" alt="Segundo Slide">
+              <div class="text">
+                <p>Tela cadastro de despesa</p>
+              </div>
+            </div>
+            <div class="slide">
+              <img src="\Design\portifolio\excel\tela_login.png" class="expandable" alt="Segundo Slide">
+              <div class="text">
+                <p>Tela de login</p>
+              </div>
+            </div>
+            <button class="prev">&#10094;</button>
+            <button class="next">&#10095;</button>
+            <div class="dots">
+              <span class="dot active"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
+        </section>
+        <section class="section-projeto">
+          <div class="carousel">
+            <div class="slide active">
+              <img src="\Design\portifolio\dashboard\dashfinanceiro.png" class="expandable" alt="Primeiro Slide">
+              <div class="text">
+                <h3>Dashboard Orçamentário - Power BI</h3>
                 <p>Tela principal com os principais indicadores operacionais</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\dashboard\dashfinanceiro2.png" alt="Segundo Slide">
+              <img src="\Design\portifolio\dashboard\dashfinanceiro2.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela secundária com detalhamento</p>
               </div>
@@ -482,20 +540,20 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="\Design\portifolio\dashboard\dashvendas.png" alt="Primeiro Slide">
+              <img src="\Design\portifolio\dashboard\dashvendas.png" class="expandable" alt="Primeiro Slide">
               <div class="text">
-                <h3>Dashboard Vendas</h3>
+                <h3>Dashboard Vendas - Power BI</h3>
                 <p>Tela de visão geral das metas e da variação mensal</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\dashboard\dashvendas2.png" alt="Segundo Slide">
+              <img src="\Design\portifolio\dashboard\dashvendas2.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela Leads Gerados de Pessoa Física</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\dashboard\dashvendas3.png" alt="Terceiro Slide">
+              <img src="\Design\portifolio\dashboard\dashvendas3.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <h3>Título do terceiro slide</h3>
                 <p>Tela Leads Gerados de Pessoa Jurídica</p>
@@ -513,50 +571,50 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="/Design/portifolio/dashboard/dashsocial1.png" alt="Primeiro Slide">
+              <img src="/Design/portifolio/dashboard/dashsocial1.png" class="expandable" alt="Primeiro Slide">
               <div class="text">
-                <h3>Dashboard Redes Sociais</h3>
+                <h3>Dashboard Redes Sociais - Power BI</h3>
                 <p>Tela de performance no TikTok</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial2.png" alt="Segundo Slide">
+              <img src="/Design/portifolio/dashboard/dashsocial2.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance no TikTok</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial7.png" alt="Terceiro Slide">
+              <img src="/Design/portifolio/dashboard/dashsocial7.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de performance no LinkedIn</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial8.png" alt="Terceiro Slide">
+              <img src="/Design/portifolio/dashboard/dashsocial8.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance no LinkedIn</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial3.png" alt="Terceiro Slide">
+              <img src="/Design/portifolio/dashboard/dashsocial3.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de performance no Instagram</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial4.png" alt="Terceiro Slide">
+              <img src="/Design/portifolio/dashboard/dashsocial4.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance no Instagram</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial5.png" alt="Terceiro Slide">
+              <img src="/Design/portifolio/dashboard/dashsocial5.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de performance no Facebook</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial6.png" alt="Terceiro Slide">
+              <img src="/Design/portifolio/dashboard/dashsocial6.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance no Facebook</p>
               </div>
@@ -578,20 +636,20 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="\Design\portifolio\dashboard\dashemail.png" alt="Primeiro Slide">
+              <img src="\Design\portifolio\dashboard\dashemail.png" class="expandable" alt="Primeiro Slide">
               <div class="text">
-                <h3>Dashboard Gestão E-mails Marketing</h3>
+                <h3>Dashboard Gestão E-mails Marketing - Power BI</h3>
                 <p>Tela principal com indicadores, informações geras e listagem de e-mail disparados</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\dashboard\dashemail2.png" alt="Segundo Slide">
+              <img src="\Design\portifolio\dashboard\dashemail2.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela de detalhamento de e-mail marketing selecionado</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\dashboard\dashemail3.png" alt="Terceiro Slide">
+              <img src="\Design\portifolio\dashboard\dashemail3.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance dos e-mails marketing selecionados</p>
               </div>
@@ -612,6 +670,10 @@
       <a href="https://www.behance.net/vinisferrari" target="_blank">
         <p>ACESSE O PORTFOLIO COMPLETO <i class="fa-solid fa-arrow-pointer"></i></p>
       </a>
+    </div>
+    <div id="imageModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="modalImg">
     </div>
   </section>
   <section class="orcamento-section" id="contact-orcamento">
