atualização do carousel de portfolio e melhorias de estilização

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <script src="js/carousel-slide.js"></script>
   <script src="js/drawerMenuHandler.js"></script>
   <script src="js/animation-service.js"></script>
-  <script src="js/animation-header"></script>
+  <script src="js/animation-header.js"></script>
   <script src="js/navegation-header.js"></script>
   <script src="https://kit.fontawesome.com/832d8f848b.js" crossorigin="anonymous"></script>
 </head>
