--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" type="text/css" href="css/service.css">
   <link rel="stylesheet" type="text/css" href="css/clientes.css">
   <link rel="stylesheet" type="text/css" href="css/skills.css">
+  <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/effect-text-hero.css">
   <script src="js/language-selector.js"></script>
   <script src="js/carousel-slide.js"></script>
   <script src="js/drawerMenuHandler.js"></script>
@@ -28,6 +30,7 @@
   <script src="js/animation-header.js"></script>
   <script src="js/navegation-header.js"></script>
   <script src="https://kit.fontawesome.com/832d8f848b.js" crossorigin="anonymous"></script>
+  <script src="js/effect-text-hero.js"></script>
 </head>
 
 <body>
@@ -88,10 +91,25 @@
     <div class="hero-content-mobile">
     </div>
     <div class="hero-conteiner">
+      <section class="welcome-effect">
+        <div class="container-effect-text">
+          <div class="effect-container">
+            <div class="typing-text">
+              <span>www.viniciusferrari.dev/</span>
+            </div>
+            <div class="container-text2">
+              <div class="reveal-background"></div>
+              <div class="reveal-text">
+                <span>Seja Bem-Vindo!</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <div class="hero-content">
         <div class="hero-image"></div>
         <div class="hero-text">
-          <h1><span>Olá, eu sou Vinícius</span><br>Desenvolvedor Full Stack</h1>
+          <h1><span class="name-text">Olá, eu sou Vinícius</span><br>Desenvolvedor Full Stack</h1>
           <p class="biography">Formando em Análise e Desenvolvimento de Sistemas pela Universidade Presbiteriana Mackenzie, com       expertize em projetos de TI como desenvolvimento de aplicações web, websites, análise de dados, criação de dashboards, automação de tarefas e planilhas. 
           </p>
           <div class="contact-info">
