atualizacao tags meta e css do /page/links.html

--- a/pages/links.html
+++ b/pages/links.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Vinicius Ferrari - Redes Sociais</title>
+    <meta name="description" content="">
+    <link rel="icon" type="x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="../css/pagelinks.css">
     <script src="../js/pagelinks.js" defer></script>
     <script src="https://kit.fontawesome.com/832d8f848b.js" crossorigin="anonymous"></script>
