substituindo o caminho Design para design nos arquivos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <header class="no-drawer">
     <div class="logo">
-      <img src="\Design\logo\logo simples.png" alt="Logo">
+      <img src="\design\logo\logo simples.png" alt="Logo">
     </div>
     <nav>
       <ul>
@@ -62,7 +62,7 @@
       <i class="fa-solid fa-bars fa-2xl"></i>
     </button>
     <div class="logo">
-      <img src="\Design\logo\logo_box_preenchido.png" alt="Logo">
+      <img src="\design\logo\logo_box_preenchido.png" alt="Logo">
     </div>
   </header>
   <div class="drawer-menu-container" id="bar-drawer-menu">
@@ -149,7 +149,7 @@
       <h2>Tecnologias e ferramentas utilizadas</h2>
       <div class="skills-grid">
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\html.png" alt="HTML Logo">
+          <img src="\design\tecnologias e ferramentas\logos\html.png" alt="HTML Logo">
           <div class="skill-info">
             <h4>HTML</h4>
             <div class="progress-bar">
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\css.png" alt="CSS Logo">
+          <img src="\design\tecnologias e ferramentas\logos\css.png" alt="CSS Logo">
           <div class="skill-info">
             <h4>CSS</h4>
             <div class="progress-bar">
@@ -167,7 +167,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\vba.png" alt="VBA Logo">
+          <img src="\design\tecnologias e ferramentas\logos\vba.png" alt="VBA Logo">
           <div class="skill-info">
             <h4>Visual Basic for Applications</h4>
             <div class="progress-bar">
@@ -176,7 +176,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\powerbi.png" alt="Power BI Logo">
+          <img src="\design\tecnologias e ferramentas\logos\powerbi.png" alt="Power BI Logo">
           <div class="skill-info">
             <h4>Power BI</h4>
             <div class="progress-bar">
@@ -185,7 +185,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\powerautomate.png" alt="Power Automate Logo">
+          <img src="\design\tecnologias e ferramentas\logos\powerautomate.png" alt="Power Automate Logo">
           <div class="skill-info">
             <h4>Power Automate</h4>
             <div class="progress-bar">
@@ -194,7 +194,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\office365.png" alt="Microsoft Office Logo">
+          <img src="\design\tecnologias e ferramentas\logos\office365.png" alt="Microsoft Office Logo">
           <div class="skill-info">
             <h4>Microsoft Office</h4>
             <div class="progress-bar">
@@ -203,7 +203,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\javascript.png" alt="JavaScript Logo">
+          <img src="\design\tecnologias e ferramentas\logos\javascript.png" alt="JavaScript Logo">
           <div class="skill-info">
             <h4>JavaScript</h4>
             <div class="progress-bar">
@@ -212,7 +212,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\typescript.png" alt="TypeScript Logo">
+          <img src="\design\tecnologias e ferramentas\logos\typescript.png" alt="TypeScript Logo">
           <div class="skill-info">
             <h4>TypeScript</h4>
             <div class="progress-bar">
@@ -221,7 +221,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\sql.png" alt="SQL Logo">
+          <img src="\design\tecnologias e ferramentas\logos\sql.png" alt="SQL Logo">
           <div class="skill-info">
             <h4>SQL</h4>
             <div class="progress-bar">
@@ -230,7 +230,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\excel.png" alt="Excel Logo">
+          <img src="\design\tecnologias e ferramentas\logos\excel.png" alt="Excel Logo">
           <div class="skill-info">
             <h4>Excel</h4>
             <div class="progress-bar">
@@ -239,7 +239,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\figma.png" alt="Figma Logo">
+          <img src="\design\tecnologias e ferramentas\logos\figma.png" alt="Figma Logo">
           <div class="skill-info">
             <h4>Figma</h4>
             <div class="progress-bar">
@@ -248,7 +248,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\mongodb.png" alt="MongoDB Logo">
+          <img src="\design\tecnologias e ferramentas\logos\mongodb.png" alt="MongoDB Logo">
           <div class="skill-info">
             <h4>MongoDB</h4>
             <div class="progress-bar">
@@ -257,7 +257,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\python.png" alt="Python Logo">
+          <img src="\design\tecnologias e ferramentas\logos\python.png" alt="Python Logo">
           <div class="skill-info">
             <h4>Python</h4>
             <div class="progress-bar">
@@ -266,7 +266,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\java.png" alt="Java Logo">
+          <img src="\design\tecnologias e ferramentas\logos\java.png" alt="Java Logo">
           <div class="skill-info">
             <h4>Java</h4>
             <div class="progress-bar">
@@ -275,7 +275,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\vscode.png" alt="VS Code Logo">
+          <img src="\design\tecnologias e ferramentas\logos\vscode.png" alt="VS Code Logo">
           <div class="skill-info">
             <h4>Visual Studio Code</h4>
             <div class="progress-bar">
@@ -284,7 +284,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\jupyter_notebook.png" alt="Jupyter Notebook Logo">
+          <img src="\design\tecnologias e ferramentas\logos\jupyter_notebook.png" alt="Jupyter Notebook Logo">
           <div class="skill-info">
             <h4>Jupyter Notebook</h4>
             <div class="progress-bar">
@@ -293,7 +293,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\photoshop.png" alt="Photoshop Logo">
+          <img src="\design\tecnologias e ferramentas\logos\photoshop.png" alt="Photoshop Logo">
           <div class="skill-info">
             <h4>Photoshop</h4>
             <div class="progress-bar">
@@ -302,7 +302,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\nodejs.png" alt="Node.js Logo">
+          <img src="\design\tecnologias e ferramentas\logos\nodejs.png" alt="Node.js Logo">
           <div class="skill-info">
             <h4>Node.js</h4>
             <div class="progress-bar">
@@ -311,7 +311,7 @@
           </div>
         </div>
         <div class="skill-card">
-          <img src="\Design\tecnologias e ferramentas\logos\git.png" alt="Git Logo">
+          <img src="\design\tecnologias e ferramentas\logos\git.png" alt="Git Logo">
           <div class="skill-info">
             <h4>Git</h4>
             <div class="progress-bar">
@@ -393,7 +393,7 @@
       <div class="conteiner-group">
         <div class="card">
           <div class="card-content">
-            <img src="\Design\Servicos\sheet.png" alt="Ícone Planilhas do Excel" class="icon">
+            <img src="\design\Servicos\sheet.png" alt="Ícone Planilhas do Excel" class="icon">
             <div class="card-subject">
               <h2>Planilhas Completas</h2>
               <p>Evite erros operacionais e ganhe eficiência com planilhas automatizadas e de fácil uso</p>
@@ -406,7 +406,7 @@
         
         <div class="card">
           <div class="card-content">
-            <img src="\Design\Servicos\dashboard1.png" alt="Ícone Dashboard" class="icon">
+            <img src="\design\Servicos\dashboard1.png" alt="Ícone Dashboard" class="icon">
             <div class="card-subject">
               <h2>Dashboards</h2>
               <p>Transforme dados em decisões com dashboards personalizados e impactantes</p>
@@ -420,7 +420,7 @@
       <div class="conteiner-group">
         <div class="card">
           <div class="card-content">
-            <img src="\Design\Servicos\site1.png" alt="Ícone Sites e Landing Pages" class="icon">
+            <img src="\design\Servicos\site1.png" alt="Ícone Sites e Landing Pages" class="icon">
             <div class="card-subject">
               <h2>Sites e Landing Pages</h2>
               <p>Estabeleça uma presença online poderosa com sites e landing pages de alta performance</p>
@@ -432,7 +432,7 @@
         
         <div class="card">
           <div class="card-content">
-            <img src="\Design\Servicos\robot-service.png" alt="Ícone Automação de Tarefas" class="icon">
+            <img src="\design\Servicos\robot-service.png" alt="Ícone Automação de Tarefas" class="icon">
             <div class="card-subject">
               <h2>Automação de Tarefas</h2>
               <p>Maximize sua eficiência e reduza custos com soluções de automação de tarefas personalizadas.</p>
@@ -477,44 +477,44 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="\Design\portifolio\excel\tela_menu.png" class="expandable" alt="Primeiro Slide">
+              <img src="\design\portifolio\excel\tela_menu.png" class="expandable" alt="Primeiro Slide">
               <div class="text">
                 <h3>Sistema Back Office Loja de Vestuário - Excel VBA</h3>
                 <p>Tela inicial com atalho para as telas do sistema</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\excel\tela_painel_vendas.png" class="expandable" alt="Segundo Slide">
+              <img src="\design\portifolio\excel\tela_painel_vendas.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela de processamento de pedidos e vendas</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\excel\tela_recibo.png" class="expandable" alt="Segundo Slide">
+              <img src="\design\portifolio\excel\tela_recibo.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela de gerar recibo de venda</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\excel\tela_cadastro_produto.png" class="expandable" alt="Segundo Slide">
+              <img src="\design\portifolio\excel\tela_cadastro_produto.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela cadastro de produtos</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\excel\tela_cadastro_cliente.png" class="expandable" alt="Segundo Slide">
+              <img src="\design\portifolio\excel\tela_cadastro_cliente.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela cadastro de cliente</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\excel\tela_cadastro_despesas.jpg" class="expandable" alt="Segundo Slide">
+              <img src="\design\portifolio\excel\tela_cadastro_despesas.jpg" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela cadastro de despesa</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\excel\tela_login.png" class="expandable" alt="Segundo Slide">
+              <img src="\design\portifolio\excel\tela_login.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela de login</p>
               </div>
@@ -535,14 +535,14 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="\Design\portifolio\dashboard\dashfinanceiro.png" class="expandable" alt="Primeiro Slide">
+              <img src="\design\portifolio\dashboard\dashfinanceiro.png" class="expandable" alt="Primeiro Slide">
               <div class="text">
                 <h3>Dashboard Orçamentário - Power BI</h3>
                 <p>Tela principal com os principais indicadores operacionais</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\dashboard\dashfinanceiro2.png" class="expandable" alt="Segundo Slide">
+              <img src="\design\portifolio\dashboard\dashfinanceiro2.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela secundária com detalhamento</p>
               </div>
@@ -558,20 +558,20 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="\Design\portifolio\dashboard\dashvendas.png" class="expandable" alt="Primeiro Slide">
+              <img src="\design\portifolio\dashboard\dashvendas.png" class="expandable" alt="Primeiro Slide">
               <div class="text">
                 <h3>Dashboard Vendas - Power BI</h3>
                 <p>Tela de visão geral das metas e da variação mensal</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\dashboard\dashvendas2.png" class="expandable" alt="Segundo Slide">
+              <img src="\design\portifolio\dashboard\dashvendas2.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela Leads Gerados de Pessoa Física</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\dashboard\dashvendas3.png" class="expandable" alt="Terceiro Slide">
+              <img src="\design\portifolio\dashboard\dashvendas3.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <h3>Título do terceiro slide</h3>
                 <p>Tela Leads Gerados de Pessoa Jurídica</p>
@@ -589,50 +589,50 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="/Design/portifolio/dashboard/dashsocial1.png" class="expandable" alt="Primeiro Slide">
+              <img src="/design/portifolio/dashboard/dashsocial1.png" class="expandable" alt="Primeiro Slide">
               <div class="text">
                 <h3>Dashboard Redes Sociais - Power BI</h3>
                 <p>Tela de performance no TikTok</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial2.png" class="expandable" alt="Segundo Slide">
+              <img src="/design/portifolio/dashboard/dashsocial2.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance no TikTok</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial7.png" class="expandable" alt="Terceiro Slide">
+              <img src="/design/portifolio/dashboard/dashsocial7.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de performance no LinkedIn</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial8.png" class="expandable" alt="Terceiro Slide">
+              <img src="/design/portifolio/dashboard/dashsocial8.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance no LinkedIn</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial3.png" class="expandable" alt="Terceiro Slide">
+              <img src="/design/portifolio/dashboard/dashsocial3.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de performance no Instagram</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial4.png" class="expandable" alt="Terceiro Slide">
+              <img src="/design/portifolio/dashboard/dashsocial4.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance no Instagram</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial5.png" class="expandable" alt="Terceiro Slide">
+              <img src="/design/portifolio/dashboard/dashsocial5.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de performance no Facebook</p>
               </div>
             </div>
             <div class="slide">
-              <img src="/Design/portifolio/dashboard/dashsocial6.png" class="expandable" alt="Terceiro Slide">
+              <img src="/design/portifolio/dashboard/dashsocial6.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance no Facebook</p>
               </div>
@@ -654,20 +654,20 @@
         <section class="section-projeto">
           <div class="carousel">
             <div class="slide active">
-              <img src="\Design\portifolio\dashboard\dashemail.png" class="expandable" alt="Primeiro Slide">
+              <img src="\design\portifolio\dashboard\dashemail.png" class="expandable" alt="Primeiro Slide">
               <div class="text">
                 <h3>Dashboard Gestão E-mails Marketing - Power BI</h3>
                 <p>Tela principal com indicadores, informações geras e listagem de e-mail disparados</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\dashboard\dashemail2.png" class="expandable" alt="Segundo Slide">
+              <img src="\design\portifolio\dashboard\dashemail2.png" class="expandable" alt="Segundo Slide">
               <div class="text">
                 <p>Tela de detalhamento de e-mail marketing selecionado</p>
               </div>
             </div>
             <div class="slide">
-              <img src="\Design\portifolio\dashboard\dashemail3.png" class="expandable" alt="Terceiro Slide">
+              <img src="\design\portifolio\dashboard\dashemail3.png" class="expandable" alt="Terceiro Slide">
               <div class="text">
                 <p>Tela de análise temporal da performance dos e-mails marketing selecionados</p>
               </div>
