substituindo o caminho Servicos para servicos nos arquivos

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       <div class="conteiner-group">
         <div class="card">
           <div class="card-content">
-            <img src="\design\Servicos\sheet.png" alt="Ícone Planilhas do Excel" class="icon">
+            <img src="\design\servicos\sheet.png" alt="Ícone Planilhas do Excel" class="icon">
             <div class="card-subject">
               <h2>Planilhas Completas</h2>
               <p>Evite erros operacionais e ganhe eficiência com planilhas automatizadas e de fácil uso</p>
@@ -406,7 +406,7 @@
         
         <div class="card">
           <div class="card-content">
-            <img src="\design\Servicos\dashboard1.png" alt="Ícone Dashboard" class="icon">
+            <img src="\design\servicos\dashboard1.png" alt="Ícone Dashboard" class="icon">
             <div class="card-subject">
               <h2>Dashboards</h2>
               <p>Transforme dados em decisões com dashboards personalizados e impactantes</p>
@@ -420,7 +420,7 @@
       <div class="conteiner-group">
         <div class="card">
           <div class="card-content">
-            <img src="\design\Servicos\site1.png" alt="Ícone Sites e Landing Pages" class="icon">
+            <img src="\design\servicos\site1.png" alt="Ícone Sites e Landing Pages" class="icon">
             <div class="card-subject">
               <h2>Sites e Landing Pages</h2>
               <p>Estabeleça uma presença online poderosa com sites e landing pages de alta performance</p>
@@ -432,7 +432,7 @@
         
         <div class="card">
           <div class="card-content">
-            <img src="\design\Servicos\robot-service.png" alt="Ícone Automação de Tarefas" class="icon">
+            <img src="\design\servicos\robot-service.png" alt="Ícone Automação de Tarefas" class="icon">
             <div class="card-subject">
               <h2>Automação de Tarefas</h2>
               <p>Maximize sua eficiência e reduza custos com soluções de automação de tarefas personalizadas.</p>
